despotic/winds/pwind_interface.H

  // Wind density
  double drhodx(const double x,
		const double a,
		const pwind *pw);
  double rho(const double a,
	     const double epsabs,
	     const double epsrel,
	     const pwind *pw);
  void rho_vec(const unsigned long na,
	       const double *a,
	       const double epsabs,
	       const double epsrel,
	       const pwind *pw,
	       double *result);
  // Momentum flux
  double pdot(const double a,
	      const double epsabs,
	      const double epsrel,
	      const pwind *pw);
  void pdot_vec(const unsigned long na,
		const double *a,
		const double epsabs,
		const double epsrel,
		const pwind *pw,
		double *result);
  // Energy flux
  double Edot(const double a,
	      const double epsabs,
	      const double epsrel,
	      const pwind *pw);
  void Edot_vec(const unsigned long na,
		const double *a,
		const double epsabs,
		const double epsrel,
		const pwind *pw,
		double *result);
  // Momentum flux normalised to driving momentum flux
  double pdotRel_approx(const double a,
			const double epsabs,
			const double epsrel,
			const pwind *pw);
  double pdotRel_exact(const double a,
		       const double fg,
		       const double tctw,
		       const double epsabs,
		       const double epsrel,
		       const pwind *pw);
  
  // Absorption
  double Phi_uc(const double u,
		const double varpi,
		const double varpi_t,
		const double a0,
		const double a1,
		const double epsabs,
		const double epsrel,
		const pwind *pw);
  void Phi_uc_vec(const unsigned long nu,
		  const double *u,
		  const double varpi,
		  const double varpi_t,
		  const double a0,
		  const double a1,
		  const double epsabs,
		  const double epsrel,
		  const pwind *pw,
		  double *result);
  double tau_uc(const double u,
		const double tXtw,
		const double fj,
		const double boltzfac,
		const double varpi,
		const double varpi_t,
		const double a0,
		const double a1,
		const double epsabs,
		const double epsrel,
		const pwind *pw);
  void tau_uc_vec(const unsigned long nu,
		  const double *u,
		  const double tXtw,
		  const double fj,
		  const double boltzfac,
		  const double varpi,
		  const double varpi_t,
		  const double a0,
		  const double a1,
		  const double epsabs,
		  const double epsrel,
		  const pwind *pw,
		  double *result);
  double tau_uc_multiple(const double u,
			 const double *u_trans,
			 const double *tXtw,
			 const double fj,
			 const double boltzfac,
			 const unsigned long ntrans,
			 const double varpi,
			 const double varpi_t,
			 const double a0,
			 const double a1,
			 const double epsabs,
			 const double epsrel,
			 const pwind *pw);
  void tau_uc_multiple_vec(const unsigned long nu,
			   const double *u,
			   const double *u_trans,
			   const double *tXtw,
			   const double fj,
			   const double boltzfac,
			   const unsigned long ntrans,
			   const double varpi,
			   const double varpi_t,
			   const double a0,
			   const double a1,
			   const double epsabs,
			   const double epsrel,
			   const pwind *pw,
			   double *result);
  double Phi_c(const double u,
	       const double fw,
	       const double varpi,
	       const double varpi_t,
	       const double a0,
	       const double a1,
	       const double epsabs,
	       const double epsrel,
	       const pwind *pw);
  void Phi_c_vec(const unsigned long nu,
		 const double *u,
		 const double fw,
		 const double varpi,
		 const double varpi_t,
		 const double a0,
		 const double a1,
		 const double epsabs,
		 const double epsrel,
		 const pwind *pw,
		 double *result);
  double tau_c(const double u,
	       const double tXtw,
	       const double fj,
	       const double boltzfac,
	       const double fw,
	       const double varpi,
	       const double varpi_t,
	       const double a0,
	       const double a1,
	       const double epsabs,
	       const double epsrel,
	       const pwind *pw);
  void tau_c_vec(const unsigned long nu,
		 const double *u,
		 const double tXtw,
		 const double fj,
		 const double boltzfac,
		 const double fw,
		 const double varpi,
		 const double varpi_t,
		 const double a0,
		 const double a1,
		 const double epsabs,
		 const double epsrel,
		 const pwind *pw,
		 double *result);
  double tau_c_multiple(const double u,
			const double *u_trans,
			const double *tXtw,
			const double fj,
			const double boltzfac,
			const unsigned long ntrans,
			const double fw,
			const double varpi,
			const double varpi_t,
			const double a0,
			const double a1,
			const double epsabs,
			const double epsrel,
			const pwind *pw);
  void tau_c_multiple_vec(const unsigned long nu,
			  const double *u,
			  const double *u_trans,
			  const double *tXtw,
			  const double fj,
			  const double boltzfac,
			  const unsigned long ntrans,
			  const double fw,
			  const double varpi,
			  const double varpi_t,
			  const double a0,
			  const double a1,
			  const double epsabs,
			  const double epsrel,
			  const pwind *pw,
			  double *result);
  // Thin, subcritical emission
  double Xi(const double u,
	    const double varpi,
	    const double varpi_t,
	    const double epsabs,
	    const double epsrel,
	    const pwind *pw);
  void Xi_vec(const unsigned long nu,
	      const double *u,
	      const double varpi,
	      const double varpi_t,
	      const double epsabs,
	      const double epsrel,
	      const pwind *pw,
	      double *result);
  double xi(const double varpi,
	    const double varpi_t,
	    const double epsabs,
	    const double epsrel,
	    const pwind *pw);
  // LTE emission
  double eta(const double u,
	     const double tXtw,
	     const double fj,
	     const double boltzfac,
	     const bool correlated,
	     const double fw,
	     const double varpi,
	     const double varpi_t,
	     const bool thin,
	     const double epsabs,
	     const double epsrel,
	     const pwind *pw);
  void eta_vec(const unsigned long nu,
	       const double *u,
	       const double tXtw,
	       const double fj,
	       const double boltzfac,
	       const bool correlated,
	       const double fw,
	       const double varpi,
	       const double varpi_t,
	       const bool thin,
	       const double epsabs,
	       const double epsrel,
	       const pwind *pw,
	       double *result);
  double Psi(const double tXtw,
	     const double fj,
  	     const double boltzfac,
	     const bool correlated,
	     const double fw,
	     const double varpi,
	     const double varpi_t,
	     const bool thin,
	     const double epsabs,
	     const double epsrel,
	     const pwind *pw);
  // Error management
  int get_err(const pwind *pw);
  void set_err(const int err, pwind *pw);
  void clear_err(pwind *pw);
  const char *get_err_str(const pwind *pw);
  // Functions to manage the hot data tabulated data
  hot_wind_table *read_hot_wind_table(const char *dirname,
				      const int yidx,
				      const int midx);
  void free_hot_wind_table(hot_wind_table *tab);
  void get_hot_wind_table_limits(hot_wind_table *tab,
				 double *uh_limits);