despotic/winds/pwind_interface.py


# Computation methods
libpwind.drhodx.restype = c_double
libpwind.drhodx.argtypes = [ c_double, c_double, c_void_p ]
libpwind.rho.restype = c_double
libpwind.rho.argtypes = [ c_double, c_double, c_double, c_void_p ]
libpwind.rho_vec.restype = None
libpwind.rho_vec.argtypes = [ c_ulong, array_1d_double, c_double, c_double,
                              c_void_p, array_1d_double ]
libpwind.pdot.restype = c_double
libpwind.pdot.argtypes = [ c_double, c_double, c_double, c_void_p ]
libpwind.pdot_vec.restype = None
libpwind.pdot_vec.argtypes = [ c_ulong, array_1d_double, c_double, c_double,
                              c_void_p, array_1d_double ]
libpwind.Edot.restype = c_double
libpwind.Edot.argtypes = [ c_double, c_double, c_double, c_void_p ]
libpwind.Edot_vec.restype = None
libpwind.Edot_vec.argtypes = [ c_ulong, array_1d_double, c_double, c_double,
                              c_void_p, array_1d_double ]
libpwind.pdotRel_approx.restype = c_double
libpwind.pdotRel_approx.argtypes = [ c_double, c_double, c_double, c_void_p ]
libpwind.pdotRel_exact.restype = c_double
libpwind.pdotRel_exact.argtypes = [ c_double, c_double, c_double,
                                 c_double, c_double, c_void_p ]
libpwind.Phi_uc.restype = c_double
libpwind.Phi_uc.argtypes = [ c_double, c_double, c_double, c_double,
                             c_double, c_double, c_void_p ]
libpwind.Phi_uc_vec.restype = None
libpwind.Phi_uc_vec.argtypes = [ c_ulong, array_1d_double,
                                 c_double, c_double, c_double, c_double,
                                 c_double, c_double, c_void_p,
                                 array_1d_double]
libpwind.Phi_c.restype = c_double
libpwind.Phi_c.argtypes = [ c_double, c_double, c_double, c_double,
                            c_double, c_double, c_double, c_double, c_void_p ]
libpwind.Phi_c_vec.restype = None
libpwind.Phi_c_vec.argtypes = [ c_ulong, array_1d_double, c_double,
                                c_double, c_double, c_double, c_double,
                                c_double, c_double, c_void_p,
                                array_1d_double]
libpwind.tau_uc.restype = c_double
libpwind.tau_uc.argtypes = [ c_double, c_double, c_double, c_double,
                             c_double, c_double, c_double, c_double,
                             c_double, c_double, c_void_p ]
libpwind.tau_uc_vec.restype = None
libpwind.tau_uc_vec.argtypes = [ c_ulong, array_1d_double,
                                 c_double, c_double, c_double,
                                 c_double, c_double, c_double, c_double,
                                 c_double, c_double, c_void_p,
                                 array_1d_double ]
libpwind.tau_uc_multiple.restype = c_double
libpwind.tau_uc_multiple.argtypes = [ c_double, array_1d_double,
                                      array_1d_double,
                                      c_double, c_double,
                                      c_ulong, c_double, c_double, c_double,
                                      c_double, c_double, c_double, c_void_p ]
libpwind.tau_uc_multiple_vec.restype = None
libpwind.tau_uc_multiple_vec.argtypes = [ c_ulong, array_1d_double,
                                          array_1d_double,
                                          array_1d_double,
                                          c_double, c_double,
                                          c_ulong, c_double, c_double,
                                          c_double, c_double, c_double,
                                          c_double, c_void_p,
                                          array_1d_double ]
libpwind.tau_c.restype = c_double
libpwind.tau_c.argtypes = [ c_double, c_double, c_double, c_double, c_double,
                            c_double, c_double, c_double, c_double, c_double,
                            c_double, c_void_p ]
libpwind.tau_c_vec.restype = None
libpwind.tau_c_vec.argtypes = [ c_ulong, array_1d_double,
                                c_double, c_double, c_double, c_double,
                                c_double, c_double, c_double, c_double,
                                c_double, c_double, c_void_p,
                                array_1d_double ]
libpwind.tau_c_multiple.restype = c_double
libpwind.tau_c_multiple.argtypes = [ c_double, array_1d_double,
                                     array_1d_double,
                                     c_double, c_double,
                                     c_ulong, c_double, c_double, c_double,
                                     c_double, c_double,
                                     c_double, c_double, c_void_p ]
libpwind.tau_c_multiple_vec.restype = None
libpwind.tau_c_multiple_vec.argtypes = [ c_ulong, array_1d_double,
                                         array_1d_double,
                                         array_1d_double,
                                         c_double, c_double,
                                         c_ulong, c_double, c_double, c_double,
                                         c_double, c_double,
                                         c_double, c_double, c_void_p,
                                         array_1d_double ]
libpwind.Xi.restype = c_double
libpwind.Xi.argtypes = [ c_double, c_double, c_double,
                         c_double, c_double, c_void_p ]
libpwind.Xi_vec.restype = None
libpwind.Xi_vec.argtypes = [ c_ulong, array_1d_double, c_double, c_double,
                             c_double, c_double, c_void_p, array_1d_double ]
libpwind.xi.restype = c_double
libpwind.xi.argtypes = [ c_double, c_double, c_void_p ]
libpwind.eta.restype = c_double
libpwind.eta.argtypes = [ c_double, c_double, c_double, c_double, c_bool,
                          c_double, c_double, c_double, c_bool,
                          c_double, c_double, c_void_p ]
libpwind.eta_vec.restype = None
libpwind.eta_vec.argtypes = [ c_ulong, array_1d_double, c_double, c_double,
                              c_double, c_bool, c_double, c_double, c_double,
                              c_bool, c_double, c_double, c_void_p,
                              array_1d_double ]
libpwind.Psi.restype = c_double
libpwind.Psi.argtypes = [ c_double, c_double, c_double, c_bool,
                          c_double, c_double, c_double, c_bool,
                          c_double, c_double, c_void_p ]

# Error management methods
libpwind.get_err.restype = c_int
libpwind.get_err.argtypes = [ c_void_p ]
libpwind.set_err.restype = None
libpwind.set_err.argtypes = [ c_int, c_void_p ]
libpwind.clear_err.restype = None
libpwind.clear_err.argtypes = [ c_void_p ]
libpwind.get_err_str.restype = c_char_p
libpwind.get_err_str.argtypes = [ c_void_p ]

# Methods to manage pre-tabulated hot gas data
libpwind.read_hot_wind_table.restype = c_void_p
libpwind.read_hot_wind_table.argtypes = [ c_char_p, c_int, c_int ]
libpwind.free_hot_wind_table.restype = None
libpwind.free_hot_wind_table.argtypes = [ c_void_p ]
libpwind.get_hot_wind_table_limits.restype = None
libpwind.get_hot_wind_table_limits.argtypes = [ c_void_p, array_1d_double ]
